fixed header + off-canvas push menu
01 resolved push menu functionality for responsive views
02 scrolling of content area only established - still needs tweaking,
as 100% height of content still not visible
03 start of styling for documentation section

--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -1,20 +1,19 @@
 #hamburger--icon {
   //background-color: paleturquoise;
-  position: fixed;
-  //display: block;
-  float: left;
+  position: fixed !important;
+  top: 32px;
+  left: 30px;
   width: 46px;
   height: 46px;
-  //margin: 30px 0 30px 4.1667%;
-  margin: 32px 30px;
+  //margin: 32px 30px;
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
   transform: rotate(0deg);
   transition: .4s ease-in-out;
   
   span {
     background-color: whitesmoke;
-    display: block;
+    //display: block;
     position: absolute;
     left: 0;
     height: 6px;
@@ -38,7 +37,7 @@
   top: 28px;
 }
 
-#hamburger--icon.open span:nth-child(1) { //open class added via jQuery
+#hamburger--icon.open span:nth-child(1) {
   top: 14px;
   width: 0%;
   left: 50%;
@@ -68,8 +67,10 @@
 //Media queries - Mobile Layout: 320px
 @media only screen and (max-width: 767px) {
   #hamburger--icon {
+    top: 25px;
+    left: 15px;
     width: 36px;
-    margin: 25px 15px;
+    //margin: 25px 15px;
     
     span {
       //height: 4px;
