--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,14 +1,15 @@
 .header--api--wrapper {
   background-color: $primary-color;
-  //position: fixed;
-  //top: 0;
-  //left: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 100px;
   padding-right: 30px;
+  z-index: 1;
   
   .list__logo {
     //background-color: mistyrose;
@@ -49,7 +50,12 @@
 
 .key__area__wrapper {
   background-color: saturate(cadetblue, 30%);
-  padding: 12px 30px 12px 30px;
+  position: fixed;
+  top: 100px;
+  left: 0;
+  width: 100%;
+  padding: 8px 30px 8px 30px;
+  z-index: 1;
   
   input {
     background-color: rgba(whitesmoke, 0.4);
@@ -100,7 +106,12 @@
   }
   
   .key__area__wrapper {
-    padding: 12px 15px 12px 15px;
+    top: 80px;
+    padding: 8px 15px 8px 15px;
+    
+    input {
+      height: 30px;
+    }
   } 
 }
 
@@ -110,9 +121,16 @@
 //Media queries - Desktop Layout: 1220px
 @media only screen and (min-width: 1220px) {
   .header--api--wrapper {
+    width: 75.75%;
+    left: 24.25%;
     
     .list__logo {
       //margin-left: 30px;
     }
+  }
+  
+  .key__area__wrapper {
+    left: 24.25%;
+    width: 75.75%;
   }  
 }
