--- a/scss/modules/_main-nav-menu.scss
+++ b/scss/modules/_main-nav-menu.scss
@@ -8,6 +8,7 @@
   width: 24.25%;
   height: 100%;
   padding-top: 100px;
+  z-index: 3;
   
   .main--navigation--large {
     //@include span(6 of 24);
